argocd-helm-setup/argo-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-https
  namespace: argo
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`argo.rajesh-kumar.in`)
    kind: Rule
    priority: 10
    services:
    - name: argo-argocd-server
      port: http
  - kind: Rule
    match: Host(`argo.rajesh-kumar.in`) && Headers(`Content-Type`, `application/grpc`)
    priority: 11
    services:
      - name: argo-argocd-server
        port: 80
        scheme: h2c
  tls:
    secretName: rancher-tls-cert
